--- a/style.css
+++ b/style.css
@@ -47,15 +47,22 @@
   color: white;
   font-weight: 800;
   font-size: 1.5rem;
-  transition: all 0.1s;
+  box-shadow:
+  inset 2px 2px 5px #0002,
+  inset -2px -2px 5px #fff,
+  inset -2px -2px 5px #0002,
+  inset 2px 2px 5px #fff;
 
 }
 
 .key:hover {
-  background-color: rgb(137, 137, 239);
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 175, .5);
+  background-color: rgb(92, 91, 90);
+  box-shadow:
+  inset 2px 2px 5px #0002,
+  inset -2px -2px 5px #fff,
+  inset -2px -2px 5px #0002,
+  inset 2px 2px 5px #fff;
   cursor: pointer;
-  border-radius: 0px;
 }
 
 .line-break {
@@ -65,10 +72,9 @@
 }
 
 .active {
-  background: rgb(226, 236, 41);
-  box-shadow: inset 0px 10px 20px 2px rgba(0, 0, 0, 0.25);
+  background: rgb(41, 61, 236);
   cursor: pointer;
-  border-radius: 20px;
+  border-radius: 10px;
   color:black;
   transition: all 0.5s;
 }
