--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@
 
 .key {
   float: left;
-  width: 60px;
   height: 60px;
+  min-width: 60px;
+ 
   border-radius: 5px;
   border: 1px solid black;
   margin: 4px;
@@ -43,7 +44,7 @@
   align-items: center;
   justify-content: center;
   transition: all 0.5s;
-  background-color: rgba(49, 49, 61, 0.245);
+  background-color: rgba(114, 114, 118, 0.245);
   color: white;
   font-weight: 800;
   font-size: 1.5rem;
@@ -71,8 +72,8 @@
   display: block;
 }
 
-.active {
-  background: rgb(41, 61, 236);
+.key_active {
+  background: rgb(216, 236, 41);
   cursor: pointer;
   border-radius: 10px;
   color:black;
@@ -96,6 +97,7 @@
 .key_enter,
 .key_capslock {
   width: 200px;
+  height: 60px;
 }
 
 
