--- a/style.css
+++ b/style.css
@@ -8,21 +8,27 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 1200px;
   margin: 0 auto;
   background-color: gainsboro;
 }
 
 .display {
   display: block;
+  background-color: aliceblue;
   margin: 10px auto;
-  width: 100%;
-  height: 300px;
+  width: 1200px;
+  height: 200px;
   border: 2px solid black;
   border-radius: 5px;
   padding: 10px;
   font-size: 2rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  box-shadow:
+  inset 2px 2px 5px rgba(161, 136, 237, 0.133),
+  inset -2px -2px 5px #799ee3,
+  inset -2px -2px 5px rgba(158, 176, 221, 0.133),
+  inset 2px 2px 5px #799ee3;
 }
 
 #keyboard::after {
@@ -35,7 +41,7 @@
   float: left;
   height: 60px;
   min-width: 60px;
- 
+
   border-radius: 5px;
   border: 1px solid black;
   margin: 4px;
@@ -80,6 +86,9 @@
   transition: all 0.5s;
 }
 
+.key_caps {
+  text-transform: uppercase;
+}
 
 
 .key_backspace {
